--- a/test-echarts-dataset.html
+++ b/test-echarts-dataset.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@5.0.2/dist/echarts.min.js"></script>
-    <title>test-echarts</title>
+    <title>test-echarts-dataset</title>
     <style>
         #echart {
             width: 800px;
