--- a/test-bmap-datav-shape.html
+++ b/test-bmap-datav-shape.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="https://mapv.baidu.com/gl/examples/static/common.js"></script>
     <script src="https://mapv.baidu.com/build/mapv.min.js"></script>
     <script src="https://code.bdstatic.com/npm/mapvgl@1.0.0-beta.119/dist/mapvgl.min.js"></script>
-    <script src="https://code.bdstatic.com/npm/mapvgl@1.0.0-beta.119/dist/mapvgl.threelayers.min.js"></script>
+    <!-- <script src="https://code.bdstatic.com/npm/mapvgl@1.0.0-beta.119/dist/mapvgl.threelayers.min.js"></script> -->
     <!--  经纬度查询 墨卡托投影 ：  
         http://api/map.baidu.com/geoconv/v1/?coords=114.21892734521,29.575429778924&from=1&to=6&ak=E4KWNrh8QmEXFOF0xaYahbokBPLWtHAE ； 
         http://api.map.baidu.com/geocoder?location=39.990912172420714,116.32715863448607&coord_type=bd09mc&output=html&src=webapp.baidu.openAPIdemo ；
@@ -26,11 +26,6 @@
             width: 100%;
             height: 100%;
         }
-
-        .anchorBL,
-        .BMap_cpyCtrl {
-            display: none;
-        }
     </style>
 </head>
 
@@ -38,38 +33,29 @@
     <div id="map_container"></div>
     <script>
 
-        var map = initBMap()
-        initData().then(data => {
-            setData(map, data)
+
+        
+        // 初始化百度地图
+        var map = initMap({
+            center: [106.540547, 29.564858],
+            tilt: 80,
+            zoom: 17,
+            heading: -45.3,
         })
 
-
-        // 
-
-        // 初始化百度地图
-        function initBMap() {
-            var cityCenter = mapv.utilCityCenter.getCenterByCityName("北京")
-            var map = initMap({
-                center: [106.540547, 29.564858],
-                tilt: 80,
-                zoom: 17,
-                heading: -45.3,
-                // style: purpleStyle
-            })
-            return map
-        }
-
+        initData()
         function initData() {
-            var data = []
-            return fetch('https://youbaobao.xyz/datav-res/examples/chongqing.json')
-                .then(res => res.json()).then(res => {
+            fetch('https://www.youbaobao.xyz/datav-res/examples/chongqing.json')
+                .then(res => res.json())
+                .then(res => {
                     console.log(res)
-                    var polygons = []
-                    var len = res.length
+                    var data = res;
+                    var polygons = [];
+                    var len = data.length
                     for (var i = 0; i < len; i++) {
-                        var line = res[i]
+                        var line = data[i]
                         var polygon = []
-                        var pt = [line[i] * 512, line[2] * 512]
+                        var pt = [line[1] * 512, line[2] * 512]
                         for (var j = 3; j < line.length; j += 2) {
                             pt[0] += line[j] / 100 / 2
                             pt[1] += line[j + 1] / 100 / 2
@@ -77,7 +63,7 @@
                         }
                         polygons.push({
                             geometry: {
-                                type: "Polygeo",
+                                type: "Polygon",
                                 coordinates: [polygon]
                             },
                             properties: {
@@ -86,13 +72,13 @@
                         })
                     }
                     console.log(polygons)
-                    return polygons
+                    setData(polygons);
                 })
         }
 
-        function setData(map, data) {
+        function setData(data) {
             var view = new mapvgl.View({ map })
-            var shapeLayer = new mapvgl.ShapeLayer({
+            var shaperLayer = new mapvgl.ShapeLayer({
                 color: "rgba(194, 147, 75, 0.8)",
                 opacity: 0.3,
                 style: "normal",
@@ -102,13 +88,13 @@
                 selectedIndex: -1,
                 selectedColor: "red",
                 autoSelect: true,
-                onClick:(e)=>{
+                onClick: (e) => {
                     console.log(e)
                 }
             })
 
-            view.addLayer(shapeLayer)
-            shapeLayer.setData(data)
+            view.addLayer(shaperLayer)
+            shaperLayer.setData(data)
         }
 
 
