rollup切换模块化标准+多模块化构建

--- a/datav-libs-dev/example/index.html
+++ b/datav-libs-dev/example/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>datav libs example</title>
         <script src="../dist/datv.libs.js"></script>
+        <!-- <script src="https://www.youbaobao.xyz/datav-res/examples/imooc.datav.es.js" type="module"></script> -->
     </head>
     <body></body>
 </html>
