--- a/mobile-dev/public/index.html
+++ b/mobile-dev/public/index.html
@@ -21,6 +21,12 @@
       setRem()
     }
   </script>
+  <script type="text/javascript"
+    src="https://api.map.baidu.com/api?type=webgl&v=1.0&ak=E4KWNrh8QmEXFOF0xaYahbokBPLWtHAE"></script>
+  <script src="https://mapv.baidu.com/gl/examples/static/common.js"></script>
+  <script src="https://mapv.baidu.com/build/mapv.js"></script>
+  <script src="https://code.bdstatic.com/npm/mapvgl@1.0.0-beta.54/dist/mapvgl.min.js"></script>
+  <script src="https://code.bdstatic.com/npm/mapvgl@1.0.0-beta.54/dist/mapvgl.threelayers.min.js"></script>
 </head>
 
 <body>
