--- a/test-amap.html
+++ b/test-amap.html
@@ -44,10 +44,10 @@
         var map = new AMap.Map('container', {
             center: [120.210911, 30.252333],
             zoom: 11,
-            layers: [
-                new AMap.TileLayer.Satellite(),  //  卫星图层
-                new AMap.TileLayer.RoadNet(),  //  路 图层
-            ]
+            // layers: [
+            //     new AMap.TileLayer.Satellite(),  //  卫星图层
+            //     new AMap.TileLayer.RoadNet(),  //  路 图层
+            // ]
             // viewMode: '3D', // 地图模式
             // pitch: 75, // 地图俯仰角度，有效范围 0 度- 83 度
             // rotation: 10
@@ -57,7 +57,8 @@
             zIndex: 10
         });
         map.add(trafficLayer);//添加图层到地图
-        let isVisbile = true;
+        let isVisbile = false;
+        trafficLayer.hide()
         const btn = document.getElementById("layer_btn")
         btn.addEventListener('click', function (e) {
             isVisbile = !isVisbile
@@ -67,6 +68,11 @@
                 trafficLayer.hide()
             }
         })
+
+        const marker = new AMap.Marker({
+            position: [120.210911, 30.252333]
+        })
+        map.add(marker)
     </script>
 </body>
 
